Opened 11 years ago
Closed 11 years ago
#10039 closed bug (fixed)
[HaikuDepot] locks up while Package changes window is shown
Reported by: | diver | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/package_daemon | Version: | R1/Package Management |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
This is hrev46148 gcc2 hybrid.
Move a package to a packages folder which requires additional packages so that package daemon will show Package changes window. Now if you start HaikuDepot it will lock up until you click either Apply changes or Cancel button.
Change History (5)
comment:1 by , 11 years ago
Description: | modified (diff) |
---|---|
Summary: | [HaikuDepot] doesn't list packages if Package changes window is shown → [HaikuDepot] locks up while Package changes window is shown |
comment:2 by , 11 years ago
Component: | Applications/HaikuDepot → Kits/Package Kit |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:3 by , 11 years ago
Component: | Kits/Package Kit → Servers/package_daemon |
---|
The package daemon processes all requests in single thread. I guess this should be changed to at least allow to get information for the installation locations. Any other request should just fail immediately.
comment:4 by , 11 years ago
Status: | assigned → in-progress |
---|
Note:
See TracTickets
for help on using tickets.
pkgman update
seems to also hang at this point.